--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "terser": "^5.44.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
