--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
+    "firebase": "^12.5.0",
     "framer-motion": "^10.16.5",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
